overflow issue quick fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -90,6 +90,7 @@
   font-family: "Merriweather", serif;
   font-weight: 300;
   font-size: 14px;
+  overflow: hidden;
 }
 
 .button {
